Tweaks to language in slide 2 of pres

--- a/ShinyProject-rpubs.html
+++ b/ShinyProject-rpubs.html
@@ -768,7 +768,7 @@ Subdirectory <code>Add_Point</code> contains the app</p>
 
 </section>
 <section data-transition="linear" data-transition-speed="default">
-<h3>The app aspires to be a learning tool for exploring aspects of linear regression</h3>
+<h3>The app is a learning tool to explore aspects of linear regression</h3>
 <div class="slideContent" >
 <p><em>Primary Goals</em></p>
 
